--- a/css/style.css
+++ b/css/style.css
@@ -215,11 +215,8 @@ a#search:hover {
 	display: inline-block;
 	border: 1px solid #c9a23c;
 	border: 2px solid #b59458;
-	/*border-bottom: none;*/
 	border-right-style: none;
 	border-left-style: none;
-	/*width: 50%;*/
-	/*box-sizing: border-box;*/
 }
 #tabs li:first-child {
 	border-radius: 3px 0 0 3px;
@@ -287,9 +284,6 @@ body {
 	position: fixed;
 	top: 0;
 }
-#masteryScores>div:first-child {
-	/*border-top: 3px double #b59458;*/
-}
 
 #masteryScores>div h5 {
 	display: inline-block;
@@ -328,12 +322,8 @@ body {
 
 
 #graphChampions {
-	/*overflow-y: auto;*/
-	/*height: 400px;*/
 	margin: 1em 0;
 	border-top: 3px double #b59458;
-	/*border-bottom: 1px solid #b59458;*/
-	/*padding-top: 5em;*/
 }
 
 #top {
@@ -372,6 +362,12 @@ body {
 #graphChampions .chest img {
 	margin-left: 0.2em;
 }
+#graphChampions .level7 img {
+	border-color: #102b58;
+}
+#graphChampions .level6 img {
+	border-color: #582263;
+}
 #graphChampions .level5 img {
 	border-color: #672121;
 }
@@ -408,6 +404,23 @@ body {
 }
 .bar:hover {
 	cursor: pointer;
+}
+.level7 .bar {
+	height: 2.33em;
+	background: #102b58; /* For browsers that do not support gradients */
+	background: -webkit-linear-gradient(left, #102b58, #204b85); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(right, #102b58, #204b85); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(right, #102b58, #204b85); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(to right, #102b58, #204b85); /* Standard syntax */
+	
+}
+.level6 .bar {
+	height: 2.33em;
+	background: #582263; /* For browsers that do not support gradients */
+	background: -webkit-linear-gradient(left, #582263, #73407e); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(right, #582263, #73407e); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(right, #582263, #73407e); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(to right, #582263, #73407e); /* Standard syntax */
 }
 .level5 .bar {
 	height: 2em;
